syntax = "proto3";
package ready;

// Heartbeat
service ReadyRpcService {
    // Common Interfaces
    rpc isReady (ReadyRequest) returns (ReadyResponse);
}

// Ready Request object
message ReadyRequest {
    // No arguments
}

// Ready Response object
message ReadyResponse {

    // True if ready
    bool ready = 1;
}
